--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -1,53 +1,66 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http:/www.thymeleaf.org">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <header th:include="headerNav.html"></header>
-    <main class="container mx-auto" style="width: 450px;">
-        <form method="post" action="/user/signup.do"  class="mx-auto" style="width: 450px;">
-            <h1 class="my-4">회원가입</h1>
-                <p class="form-floating">
-                    <input type="text" name="uId" class="form-control" placeholder="??">
-                    <label>아이디</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="name" class="form-control" placeholder="??">
-                    <label>이름</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="phone" class="form-control" placeholder="??">
-                    <label>핸드폰</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="imgPath" class="form-control" placeholder="??">
-                    <label>프로필</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="email" class="form-control" placeholder="??">
-                    <label>이메일</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="birth" class="form-control" placeholder="??">
-                    <label>생일</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="address" class="form-control" placeholder="??">
-                    <label>주소</label>
-                </p>
-                <p class="form-floating">
-                    <input type="text" name="detailAddress" class="form-control" placeholder="??">
-                    <label>상세주소</label>
-                </p>
-                <p class="text-end">
-                    <button class="btn btn-outline-warning" type="reset">초기화</button>
-                    <button class="btn btn-outline-info">등록</button>
-                </p>
+<main class="container">
+    <th:block th:include="/headerNav.html"></th:block>
 
-        </form>
-
-    </main>
+    <form name="signupForm" action="./signup.do" method="post" style="width: 500px;margin: 0 auto;">
+        <h1 class="my-4">회원가입</h1>
+        <p class="form-floating">
+            <input id="uIdInput" type="text" name="uId" value="mybatisTest1" class="form-control" placeholder="??">
+            <label class="">아이디</label>
+        </p>
+        <p class="form-floating">
+            <input type="text" name="name" value="테스트유저" class="form-control" placeholder="??">
+            <label>이름</label>
+        </p>
+        <p class="form-floating">
+            <input type="password" name="pw" value="1234" class="form-control" placeholder="??">
+            <label>패스워드</label>
+        </p>
+        <p class="form-floating">
+            <input type="password" name="check_pw" value="1234" class="form-control" placeholder="??">
+            <label>패스워드 체크</label>
+        </p>
+        <p class="input-group">
+            <label class="input-group-text">프로필</label>
+            <input type="file" name="imgPath" value="" class="form-control" placeholder="??">
+        </p>
+        <p class="form-floating">
+            <input type="text" name="phone" value="11122223334" class="form-control" placeholder="??">
+            <label>핸드폰</label>
+        </p>
+        <p class="form-floating">
+            <input type="text" name="email" value="mybatisTest1@gamil.com" class="form-control" placeholder="??">
+            <label>이메일</label>
+        </p>
+        <p class="form-floating">
+            <input type="date" name="birth" value="1986-05-25" class="form-control" placeholder="??">
+            <label>생일</label>
+        </p>
+        <p class="form-floating">
+            <select name="gender" class="form-control">
+                <option value="MALE" >남자</option>
+                <option value="FEMALE" >여자</option>
+                <option value="NONE" selected>없음</option>
+            </select>
+            <label>성별</label>
+        </p>
+        <p class="form-floating">
+            <input type="text" name="address" value="서울시" class="form-control" placeholder="??">
+            <label>주소</label>
+        </p>
+        <p class="form-floating">
+            <input type="text" name="detailAddress" value="압구정" class="form-control" placeholder="??">
+            <label>주소상세</label>
+        </p>
+        <p class="text-end">
+            <button class="btn btn-outline-warning" type="reset">초기화</button>
+            <button class="btn btn-outline-primary">회원가입</button>
+        </p>
+    </form>
+</main>
 </body>
 </html>
