--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -1,12 +1,12 @@
-<html>
+<html   lang="en"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layout}">>
 <head>
     <title>Title</title>
 </head>
-<body>
-<main class="container">
-    <th:block th:include="/headerNav.html"></th:block>
-
-    <form name="signupForm" action="./signup.do" method="post" style="width: 500px;margin: 0 auto;">
+<div layout:fragment="content">
+     <form name="signupForm" action="./signup.do" method="post" style="width: 500px;margin: 0 auto;">
         <h1 class="my-4">회원가입</h1>
         <p class="form-floating">
             <input id="uIdInput" type="text" name="uId" value="mybatisTest1" class="form-control" placeholder="??">
@@ -61,6 +61,5 @@
             <button class="btn btn-outline-primary">회원가입</button>
         </p>
     </form>
-</main>
-</body>
+</div>
 </html>
