index 프록시 개념 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-                xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-                layout:decorate="~{layout}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 
 <!--<head>-->
 <!--    <meta charset="UTF-8">-->
@@ -50,7 +50,7 @@
             <!-- mybatis 를 session-factory 라고도 부른다. -->
         </li>
         <!-- 동작원리 -->
-        <li>Mapper 인터페이스 작성(@Mapper) : mybatis 는 @Mapper 가 정의된 인터페이스를 Mapper.xml 에 정의된 sql 로 java (DTO) 맵핑하는 컴포넌트를 생성</li><!-- => 생성된 컴포넌트가 sql 을 실행해서 결과를 맵핑 / 자바 객체를 반환  -->
+        <li>Mapper 인터페이스 작성(@Mapper) : mybatis 는 @Mapper 가 정의된 인터페이스를 기반으로 Mapper.xml 에 정의된 sql 을 java 객체(DTO)로 맵핑하는 컴포넌트(스프링객체)를 생성</li><!-- => 생성된 컴포넌트가 sql 을 실행해서 결과를 맵핑 / 자바 객체를 반환  -->
         <li>Mapper xml : sql(Session) 을 관리하고 테이블의 관계를 정의해서 조인을 할 수 있다.</li> <!-- 따라서 Mybatis 를 session-factory 라고 부른다. -->
         <li>**사용할 곳에서 의존성 주입(DI:Dependency Injection) 받기 : session-factory 가 @Mapper 로 정의된 인터페이스를 객체로 만들어서 주입</li>
         <!-- @Mapper : MyBatis 프레임워크에서 사용되는 어노테이션 -->
@@ -133,6 +133,73 @@
     </ul>
     <h2>webJar</h2>
     <p>Gradle 과 Maven 같은 빌드 및 자바 라이브러리(jar) 관리 도구에서 클라이언트(js,css) 측 라이브러리를 관리하는 방법</p> <!-- ex) 부트스트랩 -->
+
+    <p>스프링 부트는 자바 웹앱을 MVC 패턴으로 개발하는 프레임워크 입니다.</p>
+    <h2>spring-boot-devtools 개발자 도구</h2>
+    <ul>
+        <li>spring 내부의 코드가 변경되면 서버 재시작 및 배포를 진행</li>
+        <li>크롬 브라우저와 소켓 통신을 하다가 서버 재시작을 하면 브라우저를 새로고침 한다.</li>
+        <li>intellij 에서 컴파일러 설정에 자동 새로고침을 허용해야 한다.</li>
+        <li>크롬 확장 프로그램에서 liveReload 를 추가해야 한다. </li>
+        <li>https://chrome.google.com/webstore/detail/livereload%2B%2B/ciehpookapcdlakedibajeccomagbfab?hl=ko</li>
+        <li>인텔리제이의 Build Project Automatically 설정이 체크되어 있는지 확인합니다. (File -> Settings -> Build, Execution, Deployment -> Compiler)</li>
+    </ul>
+    <h2>spring-boot-start-web 웹앱을 개발하는 프레임워크</h2>
+    <ul>
+        <li>tomcat(10.~ 버전 이상) 이 포함 (이클립스재단에서 개발중인 jakarta)</li>
+        <li>톰캣 서블릿에 해당하는 컨트롤러(@Controller)를 작성할 수 있다.(요청과 응답처리)</li>
+        <li>컨트롤러를 작성할때 꼭! 필수적으로 처음 생성된 패키지 하위에 작성해야 한다. (component-scan 설정 : 내부적인 컴포넌트 스캔 후(컴포넌트 어노테이션 검색 후) bean 객체 등록 / 처음 생성된 패키지를 베이스 패키지로)(그래야 컨트롤러인 것을 검사한다.) </li>
+        <li>Jackson 라이브러리가 포함되어 있어서 json 파싱을 편하게 작성할 수 있다.</li>
+        <li>RESTFull API 제공(다양한 메서드[GET(==PATCH) ,POST + PUT(수정), DELETE, PATCH(리소스 일부수정)], Pathvariable - 패스의 파라미터 전송) </li>
+        <!-- 처음 생성된 패키지의 Application 파일 @ComponentSacn 을 가짐 => 해당 클래스가 위치한 디렉토리(패키지) 전체를 컴포넌트 스캔-->
+    </ul>
+    <h2>스프링 관점지향 언어 구현과 프록시 객체</h2> <!-- 스프링 관점지향 언어 구현은 프록시 객체로 되어있다! -->
+    <p>
+        mybatis 지연로딩 : 디비에서 자료를 호출할때 필요한 곳(트리거 toString,get)이 있다면 호출
+        (개발자가 작성한 Dto 클래스로는 지연로딩을 구현할 방법이 없다.)(왜? getter/setter 만 정의해서)
+    </p>
+    <p>mybatis 가 지연로딩을 구현하기 위해서 Dto 클래스(컨포넌트로 관리되는)를 기반으로 프록시(대리자) 객체를 구현(handler 필드 추가) 및 생성
+        (프록시객체 :  Dto 클래스를 대리할 수 있는 존재)
+        스프링 컨테이너는 관점지향 언어 (Ioc 관리되는 컨포넌트 - 트랜잭션을 관리할 수 있다.@Transactional 을 사용
+        컨포넌트를 기반으로 새로운 프록시 객체를 만들어서 대리자가 대신 일을 하게 한다.
+        서비스 객체를 받아서 타입을 보면 BoardServiceceImp 이 아니라 @ 어쩌고가 나온다. (맵퍼도 마찬가지)
+        추가적으로 기능들을 주입받는것.
+    </p>
+
+    <p>스프링 IoC(제어의역전) 컨테이너는 컨포넌트(객체)를 관리하고 주입하는데 컨포넌트(객체)에 추가적인 기능을 구현하기 위해 프록시 객체를 생성</p>
+    <p>프록시 객체가 구현한 handler~ 필드들은 직렬화(Seriallizable)가 불가능 하다.
+        원본객체를 참조하고 있어서 참조하는 정보들은 직렬화가 안된다.
+        데이터를 주고받으려면 통신을 하려면 통신하려는 자료를 직렬화를 해야한다.
+    </p>
+    <p>class UserDto{String name; .. get,set} => new UserDto("경민") 을 jackson.jar 라이브러리 (직렬화) => json 문자열 {\"name\" : "\경민\"}</p>
+    <p>문제해결 => DTO 객체에 @JsonIgnorePropertiest({"handler"}) 추가해서 직렬화가 불가능한 handler 필드를 제외</p>
+
+    <!-- resultMap 으로 지연로딩 구현시(fetchType="lazy"), 해당 resultMap 을 실행받는 객체는 프록시 객체가 된다. 왜? 컬렉션을 구현하기 위해서 지연로딩이 되어있어서 // handler 는 직렬화가 안되서 응답을 못한다. -->
+    <!-- 직렬화란? 데이터를 주고받으려면(통신을 하려면) 통신에 대한 자료를 직렬화를 거쳐야 한다.
+         예) '최경민' 이라는 데이터를 http 통신으로 클라이언트에게 줄때, 그대로 전송못함.
+         '최경민 '데이터의 인코딩 utf-8 의 번호를 찾아서 11500 ->  바이트화(직렬화) 한다. -> 010101010000101 -> 전기적 신호로 바꾼다.
+         🍉직렬화 : 데이터를 전송하기 위해서 바이트(전송하기위한 정보)로 바꾸는 것
+         직렬화 : '최경민' -> 11500 -> 101010100 -> 전기적 신호
+         역직렬화 :  전기적 신호 -> 101010100 -> 최경민
+
+         프록시 객체의 handler 가 직렬화가 안되는 이유는 ?
+         Dto 클래스를 참조하고 있어서. 참조하는 handler 들은 직렬화가 안된다.
+     -->
+    <!-- 🍉Dto 데이터 전송과 직렬화가 무슨관계?
+    🍉Jackson 라이브러리가 Dto 를 Json 객체로 바꿀때 직렬화 과정을 거친다.-->
+
+    <!-- 컨포넌트에 필요한 기능들을 추가하기 위해서 컨포넌트를 프록시객체로 만들어서 관리
+         이 컨포넌트의 객체들이 전부 프록시로 되어있다! => 컨포넌트는 프록시 객체 (handler 필드들이 추가가 된다.) -->
+    <!--  프록시(대리자) 객체 : Dto 클래스의 자식이고, 더 많은 정보를 가지고 있다. // Dto 클래스를 대리할 수 있는 존재
+      대리자를 구현할때 handler 라는 이름의 필드를 추가한다.
+      Dto 클래스에 어노테이션 추가 : @JsonIgnoreProperties({"handler"}) => 프록시 객체에 존재하는 handler 필드 를 제외해라
+      => 왜? 제외를 해야하나
+      @Service : IoC 컨테이너 관리되는 컨포넌트 => @Transactional 어노테이션으로 트랜잭션을 관리할 수 있다.
+      우리가 작성한 클래스, Dto 들로는 트랜잭션을 구현할 수 없다. @Service 로 엄청많은 기능을 구현할껀데 우리가 작성한 클래스로는 그런것을 구현할 수 없다.
+      우리가 추가한 @Service 컨포넌트 어노테이션을 기반으로 새로운 프록시(대리자) 객체를 만든다 => 🍉대리자(프록시객체)가 대신 일을 한다.
+       🍉실제 서비스 객체를 받아서 타입을 보면 BoardServiceImp 이 아니다. 뒤에 대리자의 타입인 $@% .. 등 뭔가 더 붙는다 // 주입받는 객체 BoardMapper 도 마찬가지다
+      컨포넌트로 관리가 될때 추가적인 기능들을 더 구현을 해야하는데,  🍉기능을 구현할때 우리가작성한 클래스,Dto 를 그대로 못쓰니까 프록시 객체를 만든다. -->
+
 
 
     <!-- 복합객체 맵핑
