프록시 개념 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -154,26 +154,21 @@
         <!-- 처음 생성된 패키지의 Application 파일 @ComponentSacn 을 가짐 => 해당 클래스가 위치한 디렉토리(패키지) 전체를 컴포넌트 스캔-->
     </ul>
     <h2>스프링 관점지향 언어 구현과 프록시 객체</h2> <!-- 스프링 관점지향 언어 구현은 프록시 객체로 되어있다! -->
+    <p>스프링 IoC(제어의역전) 컨테이너는 컨포넌트(객체)를 관리하고 주입하는데 컨포넌트(객체)에 추가적인 기능을 구현하기 위해 프록시 객체를 생성</p>
     <p>
         mybatis 지연로딩 : 디비에서 자료를 호출할때 필요한 곳(트리거 toString,get)이 있다면 호출
         (개발자가 작성한 Dto 클래스로는 지연로딩을 구현할 방법이 없다.)(왜? getter/setter 만 정의해서)
     </p>
-    <p>mybatis 가 지연로딩을 구현하기 위해서 Dto 클래스(컨포넌트로 관리되는)를 기반으로 프록시(대리자) 객체를 구현(handler 필드 추가) 및 생성
-        (프록시객체 :  Dto 클래스를 대리할 수 있는 존재)
-        스프링 컨테이너는 관점지향 언어 (Ioc 관리되는 컨포넌트 - 트랜잭션을 관리할 수 있다.@Transactional 을 사용
-        컨포넌트를 기반으로 새로운 프록시 객체를 만들어서 대리자가 대신 일을 하게 한다.
-        서비스 객체를 받아서 타입을 보면 BoardServiceceImp 이 아니라 @ 어쩌고가 나온다. (맵퍼도 마찬가지)
-        추가적으로 기능들을 주입받는것.
-    </p>
-
-    <p>스프링 IoC(제어의역전) 컨테이너는 컨포넌트(객체)를 관리하고 주입하는데 컨포넌트(객체)에 추가적인 기능을 구현하기 위해 프록시 객체를 생성</p>
-    <p>프록시 객체가 구현한 handler~ 필드들은 직렬화(Seriallizable)가 불가능 하다.
-        원본객체를 참조하고 있어서 참조하는 정보들은 직렬화가 안된다.
-        데이터를 주고받으려면 통신을 하려면 통신하려는 자료를 직렬화를 해야한다.
-    </p>
+    <p>mybatis 가 지연로딩을 구현하기 위해서 Dto 클래스(컨포넌트로 관리되는)를 기반으로 프록시(대리자) 객체(🍉resultMap)를 구현(handler 필드 추가) 및 생성</p>
+    <p>프록시 객체가 구현한 handler~ 필드들은 직렬화(Seriallizable)가 불가능 하다.</p>
     <p>class UserDto{String name; .. get,set} => new UserDto("경민") 을 jackson.jar 라이브러리 (직렬화) => json 문자열 {\"name\" : "\경민\"}</p>
     <p>문제해결 => DTO 객체에 @JsonIgnorePropertiest({"handler"}) 추가해서 직렬화가 불가능한 handler 필드를 제외</p>
 
+    <!-- (프록시객체 :  Dto 클래스를 대리할 수 있는 존재)
+     스프링 컨테이너는 관점지향 언어 (Ioc 관리되는 컨포넌트 - 트랜잭션을 관리할 수 있다.@Transactional 을 사용
+     컨포넌트를 기반으로 새로운 프록시 객체를 만들어서 대리자가 대신 일을 하게 한다.
+     서비스 객체를 받아서 타입을 보면 BoardServiceceImp 이 아니라 @ 어쩌고가 나온다. (맵퍼도 마찬가지)
+     추가적으로 기능들을 주입받는것.-->
     <!-- resultMap 으로 지연로딩 구현시(fetchType="lazy"), 해당 resultMap 을 실행받는 객체는 프록시 객체가 된다. 왜? 컬렉션을 구현하기 위해서 지연로딩이 되어있어서 // handler 는 직렬화가 안되서 응답을 못한다. -->
     <!-- 직렬화란? 데이터를 주고받으려면(통신을 하려면) 통신에 대한 자료를 직렬화를 거쳐야 한다.
          예) '최경민' 이라는 데이터를 http 통신으로 클라이언트에게 줄때, 그대로 전송못함.
