--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -17,6 +17,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/board/list.do">게시판</a> <!-- 동적페이지 경로설정(/board/ 는 가상경로) -->
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/board/register.do">
+                        게시글 등록
+                        <i class="bi bi-plus-square"></i>
+                    </a>
+                </li>
             </ul>
             <div class="d-flex">
                 <ul class="breadcrumb">
